# keyd-viz

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  keyd_cheatsheet.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: apply_ctx.rs  applying.rs  create.rs  detect.rs  devices.rs  edit_ui.rs  editing.rs  glow.rs  helper.rs  layer.rs  main.rs  monitor.rs  picker.rs  prefs.rs  probe.rs  tray.rs  ui_data.rs
crates/app/ui/: app.slint
crates/app/ui/icons/: CREDITS.md
crates/apply/: Cargo.toml
crates/apply/src/: deadman.rs  fdio.rs  lib.rs  main.rs  scan.rs  txn.rs
crates/core/: Cargo.toml
crates/core/examples/: dump.rs
crates/core/src/: board.rs  catalog.rs  edit.rs  geometry.rs  globals.rs  humanizer.rs  ids.rs  keycodes.rs  layeraction.rs  layout.rs  lib.rs  live.rs  macros.rs  model.rs  mods.rs  parser.rs  prettify.rs  qmk.rs  style.rs  taphold.rs
crates/core/src/edit/: cst.rs  mod.rs  refs.rs  tests.rs
crates/core/tests/: board.rs  edit.rs  parser.rs  properties.rs  snapshot.rs
crates/core/tests/snapshots/: snapshot__hhkb.snap  snapshot__laptop.snap
crates/helper/: Cargo.toml  build.rs
crates/helper/src/: authz.rs  evdev.rs  keyd_ipc.rs  main.rs
docs/: edit-mode-design.md  helper-design.md  labels-design.md  layer-control-design.md  testing-harness-design.md  tray-shortcut-design.md  ux-critique-edit-mode.md
examples/: hhkb.conf  laptop.conf
packaging/: README.md  install.sh  keyd-viz.desktop  uninstall.sh
packaging/appimage/: build-appimage.sh
packaging/aur/: .SRCINFO  PKGBUILD  keyd-viz.install
packaging/polkit/: io.github.coffeeowl-labs.keydviz.policy
packaging/systemd/: keydviz-helperd.service
packaging/systemd/keydviz-helperd.service.d/: keypresses.conf
packaging/sysusers.d/: keyd-viz.conf
scripts/: ux-screenshots.sh
tests/: test_parser.py
