[package]
name = "keydviz-core"
version = "1.0.0"
description = "Pure keyd config parsing, value prettifying, and physical-layout model for keyd-viz."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "keydviz_core"

# Pure logic + the QMK info.json/keymap loader (ROADMAP §5). serde(_json) is the only
# dependency — both pure Rust, so the crate still builds offline with no system libs.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
