[package]
name = "keydviz-core"
version.workspace = true
description = "Pure keyd config parsing, value prettifying, and physical-layout model for keyd-viz."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "keydviz_core"

# Pure logic + the QMK info.json/keymap loader (ROADMAP §5). serde(_json) is the only
# dependency — both pure Rust, so the crate still builds offline with no system libs.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Test-only. proptest gives structured generators + failure shrinking; insta gives
# one-command snapshot review of the board/Config model. Dev-dependencies never enter
# the keydviz_core library artifact, the AUR runtime deps, or the AppImage — the lib
# itself stays serde-only.
[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["yaml"] }
